# warehouse_drone

./: .gitignore  README.md
arcode/: Untitled Document  calib.txt  calib1.txt  calib2.txt
aruco_markers/: CMakeLists.txt  create_marker.cpp  detect_markers.cpp  ost.txt  ost.yaml
autmav_autonomy/: CMakeLists.txt  package.xml
autmav_autonomy/calib/: iris_calib.txt
autmav_autonomy/include/arucoBoardDetector/: arucoBoardDetector.h
autmav_autonomy/include/obstacle_detection/: MotionDetection.h  ObstacleDetection.h
autmav_autonomy/launch/: imav2019.launch
autmav_autonomy/src/: MotionDetection.cpp  ObstacleDetection.cpp  arucoBoardDetector.cpp  avoidance.cpp  color_position_hold.cpp  detector_node.cpp  offb_node.cpp  platform_detection.cpp
autmav_autonomy/worlds/: quadrotor.world
autmav_autonomy/worlds/materials/: texture.material
drone_description/: CMakeLists.txt  package.xml
drone_description/urdf/: quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_simple_controller.urdf.xacro
drone_description/urdf/sensors/: hokuyo_utm30lx.urdf.xacro  sonar_sensor.urdf.xacro
dynamic_control/: CMakeLists.txt  package.xml
dynamic_control/launch/: move.launch
dynamic_control/src/: controller.cpp
obstacle_avoidance/: CMakeLists.txt  package.xml
obstacle_avoidance/include/obstacle_detection/: MotionDetection.h  ObstacleDetection.h
obstacle_avoidance/rviz/: autmav_config.rviz
obstacle_avoidance/src/: MotionDetection.cpp  ObstacleDetection.cpp  avoidance.cpp  detector_node.cpp
obstacle_avoidance/worlds/materials/: ground_plain.material
shelfArrangement/: CMakeLists.txt  generateMaterialScript.cpp  shelfArrangement.cpp
sim_gazebo/: CMakeLists.txt  package.xml
sim_gazebo/launch/: avoid.launch  impr.launch  move.launch  tmp_sim.launch  wh_sim.launch
sim_gazebo/worlds/: warehouse.world
visual_guidance/: CMakeLists.txt  package.xml
visual_guidance/msg/: cell.msg  nodeGrid.msg  shelfGrid.msg
visual_guidance/params/: calib1.yaml  calib2.yaml  controlParams.yaml  controlParams2.yaml  params.yaml  params2 (copy).yaml  params2.yaml  params3.yaml  telloCam.yaml
visual_guidance/src/: ArcodeDetector.cpp  ArcodeDetector.h  avoidanceNode.py  colorSet.py  cvi.cpp  moviePub.py  pathGeneration.cpp  pathGeneration.h  pycvi.py  shelfAnalysis.py  shelfDetection.py  testNode.cpp  utility.cpp  utility.h  utility.py
visual_guidance/src/notUsed/: arcodeDetection (copy).cpp  cvi_1198.cpp  pycvi_1194.py  shelfAnalysis (copy).py  shelfAnalysis_fullbackup.py  shelfDetection (copy).py  test_node.py  windowDetection.py  windowFrameAnalysis.py
warehouse_description/: CMakeLists.txt  package.xml
warehouse_description/launch/: main_empty.launch
warehouse_description/urdf/: shelf_geometric.urdf
warehouse_description/worlds/: warehouse.world  warehouse_temp.world  wh.world
warehouse_description/worlds/models/ground_plane1/: model.sdf
warehouse_description/worlds/models/sun1/: model.sdf
warehouse_description/worlds/models/sun2/: model.sdf
warehouse_description/worlds/models/sun3/: model.sdf
warehouse_description/worlds/models/warehouseShelf/: model (copy).sdf  model.config  model.sdf
warehouse_description/worlds/models/warehouseShelf/materials/scripts/: tags.material
warehouse_description/worlds/models/warehouseShelf_temp/: mainBackup  model.sdf
